hphp/test/zend/good/Zend/tests/use_const/includes/foo_bar.php
<?hh

namespace foo;

const bar = 'local bar';
