hphp/test/zend/bad/Zend/tests/ns_075.php
<?php
namespace foo;
const NULL = 1;

echo NULL;